--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 <body>
   <!-- HEADER -->
   <header>
-    <h1>Portfolio</h1>
+    <div class="typewriter-container">
+    <span class="typewriter-text">Welcome</span>
+    <span class="typewriter-cursor"></span>
+</div>
     <nav>
       <ul>
         <li><a href="#about-me">About Me</a></li>
@@ -30,27 +33,129 @@
         <li>Accessibility (WCAG/AODA)</li>
         <li>Communication & Teamwork</li>
       </ul>
+
+      
     </section>
+
+
 
     <!-- PROJECTS -->
     <section id="projects">
       <h2>Projects</h2>
       <div class="project-container">
         <article class="project-card">
-          <img src="assets/project1.png" alt="Screenshot of Portfolio Website project">
-          <h3>Portfolio Website</h3>
-          <p>A responsive personal portfolio built with HTML, CSS, and accessibility best practices.</p>
-          <a href="#" target="_blank">Live Demo</a> | 
-          <a href="#" target="_blank">GitHub Code</a>
+          <img src="assets/ge1.png" alt="Screenshot of image translator tool">
+          <div class="description-background">
+            <h3>3D Graphics Engine</h3>
+          </div>
+          <p class="des">A responsive personal portfolio built with HTML, CSS, and accessibility best practices.</p>
+          <div class="project-links">
+            <!--<a href="#" target="_blank" class="live-demo">Live Demo</a>-->
+            <a href="https://github.com/Tyousafdev/graphics-engine" target="_blank" class="github-icon" aria-label="GitHub repository">
+                <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                <path d="M12 .5a12 12 0 0 0-3.79 23.39c.6.11.82-.26.82-.58v-2.2c-3.34.73-4.04-1.61-4.04-1.61-.55-1.38-1.35-1.75-1.35-1.75-1.1-.75.08-.74.08-.74 1.21.09 1.85 1.25 1.85 1.25 1.08 1.85 2.84 1.32 3.53 1.01.11-.79.42-1.32.77-1.63-2.67-.3-5.47-1.34-5.47-5.97 0-1.32.47-2.39 1.25-3.23-.13-.31-.54-1.57.12-3.27 0 0 1.01-.32 3.3 1.23a11.5 11.5 0 0 1 6 0c2.29-1.55 3.3-1.23 3.3-1.23.66 1.7.25 2.96.12 3.27.78.84 1.25 1.91 1.25 3.23 0 4.64-2.81 5.67-5.49 5.97.43.37.82 1.1.82 2.22v3.29c0 .32.21.7.83.58A12 12 0 0 0 12 .5z"/>
+                </svg>
+            </a>
+            </div>
         </article>
 
         <article class="project-card">
-          <img src="assets/project2.png" alt="Screenshot of Mock Redesign project">
-          <h3>Website Redesign</h3>
-          <p>Improved accessibility and design of a mock website using WCAG standards.</p>
-          <a href="#" target="_blank">Live Demo</a> | 
-          <a href="#" target="_blank">GitHub Code</a>
+          <img src="assets/image.png" alt="Screenshot of image translator tool">
+          <div class="description-background">
+            <h3>Image Translation Tool</h3>
+          </div>
+          <p class="des">A responsive personal portfolio built with HTML, CSS, and accessibility best practices.</p>
+          <div class="project-links">
+            <!--<a href="#" target="_blank" class="live-demo">Live Demo</a>-->
+            <a href="https://github.com/yourusername/yourrepo" target="_blank" class="github-icon" aria-label="GitHub repository">
+                <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                <path d="M12 .5a12 12 0 0 0-3.79 23.39c.6.11.82-.26.82-.58v-2.2c-3.34.73-4.04-1.61-4.04-1.61-.55-1.38-1.35-1.75-1.35-1.75-1.1-.75.08-.74.08-.74 1.21.09 1.85 1.25 1.85 1.25 1.08 1.85 2.84 1.32 3.53 1.01.11-.79.42-1.32.77-1.63-2.67-.3-5.47-1.34-5.47-5.97 0-1.32.47-2.39 1.25-3.23-.13-.31-.54-1.57.12-3.27 0 0 1.01-.32 3.3 1.23a11.5 11.5 0 0 1 6 0c2.29-1.55 3.3-1.23 3.3-1.23.66 1.7.25 2.96.12 3.27.78.84 1.25 1.91 1.25 3.23 0 4.64-2.81 5.67-5.49 5.97.43.37.82 1.1.82 2.22v3.29c0 .32.21.7.83.58A12 12 0 0 0 12 .5z"/>
+                </svg>
+            </a>
+            </div>
         </article>
+
+        <article class="project-card">
+          <img src="assets/gameUI.png" alt="Screenshot of image translator tool">
+          <div class="description-background">
+            <h3>Game UI Design (Figma) </h3>
+          </div>
+          <p class="des">A responsive personal portfolio built with HTML, CSS, and accessibility best practices.</p>
+          <div class="project-links">
+            <!--<a href="#" target="_blank" class="live-demo">Live Demo</a>-->
+            <a href="https://github.com/yourusername/yourrepo" target="_blank" class="github-icon" aria-label="GitHub repository">
+                <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                <path d="M12 .5a12 12 0 0 0-3.79 23.39c.6.11.82-.26.82-.58v-2.2c-3.34.73-4.04-1.61-4.04-1.61-.55-1.38-1.35-1.75-1.35-1.75-1.1-.75.08-.74.08-.74 1.21.09 1.85 1.25 1.85 1.25 1.08 1.85 2.84 1.32 3.53 1.01.11-.79.42-1.32.77-1.63-2.67-.3-5.47-1.34-5.47-5.97 0-1.32.47-2.39 1.25-3.23-.13-.31-.54-1.57.12-3.27 0 0 1.01-.32 3.3 1.23a11.5 11.5 0 0 1 6 0c2.29-1.55 3.3-1.23 3.3-1.23.66 1.7.25 2.96.12 3.27.78.84 1.25 1.91 1.25 3.23 0 4.64-2.81 5.67-5.49 5.97.43.37.82 1.1.82 2.22v3.29c0 .32.21.7.83.58A12 12 0 0 0 12 .5z"/>
+                </svg>
+            </a>
+            </div>
+        </article>
+
+        <article class="project-card">
+          <img src="assets/game.png" alt="Screenshot of image translator tool">
+          <div class="description-background">
+            <h3>Simple RPG Game</h3>
+          </div>
+          <p class="des">A responsive personal portfolio built with HTML, CSS, and accessibility best practices.</p>
+          <div class="project-links">
+            <!--<a href="#" target="_blank" class="live-demo">Live Demo</a>-->
+            <a href="https://github.com/yourusername/yourrepo" target="_blank" class="github-icon" aria-label="GitHub repository">
+                <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                <path d="M12 .5a12 12 0 0 0-3.79 23.39c.6.11.82-.26.82-.58v-2.2c-3.34.73-4.04-1.61-4.04-1.61-.55-1.38-1.35-1.75-1.35-1.75-1.1-.75.08-.74.08-.74 1.21.09 1.85 1.25 1.85 1.25 1.08 1.85 2.84 1.32 3.53 1.01.11-.79.42-1.32.77-1.63-2.67-.3-5.47-1.34-5.47-5.97 0-1.32.47-2.39 1.25-3.23-.13-.31-.54-1.57.12-3.27 0 0 1.01-.32 3.3 1.23a11.5 11.5 0 0 1 6 0c2.29-1.55 3.3-1.23 3.3-1.23.66 1.7.25 2.96.12 3.27.78.84 1.25 1.91 1.25 3.23 0 4.64-2.81 5.67-5.49 5.97.43.37.82 1.1.82 2.22v3.29c0 .32.21.7.83.58A12 12 0 0 0 12 .5z"/>
+                </svg>
+            </a>
+            </div>
+        </article>
+
+        <article class="project-card">
+          <img src="assets/calorieUI.png" alt="Screenshot of image translator tool">
+          <div class="description-background">
+            <h3>Calorie Tracking UI (Figma)</h3>
+          </div>
+          <p class="des">A responsive personal portfolio built with HTML, CSS, and accessibility best practices.</p>
+          <div class="project-links">
+            <!--<a href="#" target="_blank" class="live-demo">Live Demo</a>-->
+            <a href="https://github.com/yourusername/yourrepo" target="_blank" class="github-icon" aria-label="GitHub repository">
+                <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                <path d="M12 .5a12 12 0 0 0-3.79 23.39c.6.11.82-.26.82-.58v-2.2c-3.34.73-4.04-1.61-4.04-1.61-.55-1.38-1.35-1.75-1.35-1.75-1.1-.75.08-.74.08-.74 1.21.09 1.85 1.25 1.85 1.25 1.08 1.85 2.84 1.32 3.53 1.01.11-.79.42-1.32.77-1.63-2.67-.3-5.47-1.34-5.47-5.97 0-1.32.47-2.39 1.25-3.23-.13-.31-.54-1.57.12-3.27 0 0 1.01-.32 3.3 1.23a11.5 11.5 0 0 1 6 0c2.29-1.55 3.3-1.23 3.3-1.23.66 1.7.25 2.96.12 3.27.78.84 1.25 1.91 1.25 3.23 0 4.64-2.81 5.67-5.49 5.97.43.37.82 1.1.82 2.22v3.29c0 .32.21.7.83.58A12 12 0 0 0 12 .5z"/>
+                </svg>
+            </a>
+            </div>
+        </article>
+
+        <article class="project-card">
+          <img src="assets/tictac.png" alt="Screenshot of image translator tool">
+          <div class="description-background">
+            <h3>Tic Tac Toe</h3>
+          </div>
+          <p class="des">A responsive personal portfolio built with HTML, CSS, and accessibility best practices.</p>
+          <div class="project-links">
+            <!--<a href="#" target="_blank" class="live-demo">Live Demo</a>-->
+            <a href="https://github.com/yourusername/yourrepo" target="_blank" class="github-icon" aria-label="GitHub repository">
+                <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                <path d="M12 .5a12 12 0 0 0-3.79 23.39c.6.11.82-.26.82-.58v-2.2c-3.34.73-4.04-1.61-4.04-1.61-.55-1.38-1.35-1.75-1.35-1.75-1.1-.75.08-.74.08-.74 1.21.09 1.85 1.25 1.85 1.25 1.08 1.85 2.84 1.32 3.53 1.01.11-.79.42-1.32.77-1.63-2.67-.3-5.47-1.34-5.47-5.97 0-1.32.47-2.39 1.25-3.23-.13-.31-.54-1.57.12-3.27 0 0 1.01-.32 3.3 1.23a11.5 11.5 0 0 1 6 0c2.29-1.55 3.3-1.23 3.3-1.23.66 1.7.25 2.96.12 3.27.78.84 1.25 1.91 1.25 3.23 0 4.64-2.81 5.67-5.49 5.97.43.37.82 1.1.82 2.22v3.29c0 .32.21.7.83.58A12 12 0 0 0 12 .5z"/>
+                </svg>
+            </a>
+            </div>
+        </article>
+
+        <article class="project-card">
+          <img src="assets/etch.png" alt="Screenshot of image translator tool">
+          <div class="description-background">
+            <h3>Etch-a-Sketch</h3>
+          </div>
+          <p class="des">A responsive personal portfolio built with HTML, CSS, and accessibility best practices.</p>
+          <div class="project-links">
+            <!--<a href="#" target="_blank" class="live-demo">Live Demo</a>-->
+            <a href="https://github.com/yourusername/yourrepo" target="_blank" class="github-icon" aria-label="GitHub repository">
+                <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                <path d="M12 .5a12 12 0 0 0-3.79 23.39c.6.11.82-.26.82-.58v-2.2c-3.34.73-4.04-1.61-4.04-1.61-.55-1.38-1.35-1.75-1.35-1.75-1.1-.75.08-.74.08-.74 1.21.09 1.85 1.25 1.85 1.25 1.08 1.85 2.84 1.32 3.53 1.01.11-.79.42-1.32.77-1.63-2.67-.3-5.47-1.34-5.47-5.97 0-1.32.47-2.39 1.25-3.23-.13-.31-.54-1.57.12-3.27 0 0 1.01-.32 3.3 1.23a11.5 11.5 0 0 1 6 0c2.29-1.55 3.3-1.23 3.3-1.23.66 1.7.25 2.96.12 3.27.78.84 1.25 1.91 1.25 3.23 0 4.64-2.81 5.67-5.49 5.97.43.37.82 1.1.82 2.22v3.29c0 .32.21.7.83.58A12 12 0 0 0 12 .5z"/>
+                </svg>
+            </a>
+            </div>
+        </article>
+
+        
       </div>
     </section>
 
@@ -68,5 +173,7 @@
   <footer>
     <p>© 2025 Talha Yousaf | Built with HTML & CSS</p>
   </footer>
+
+  <script src="app.js"></script>
 </body>
 </html>
