made some changes

--- a/index.html
+++ b/index.html
@@ -67,10 +67,12 @@
             <div class="description-background">
               <h3>3D Graphics Engine</h3>
             </div>
-            <p class="des">
-              A responsive personal portfolio built with HTML, CSS, and
-              accessibility best practices.
-            </p>
+            <div class="des">
+              <p>
+                Built with C++ and OpenGL, supports rendering, textures, and 3D
+                transformations.
+              </p>
+            </div>
             <div class="project-links">
               <!--<a href="#" target="_blank" class="live-demo">Live Demo</a>-->
               <a
@@ -96,14 +98,16 @@
             <div class="description-background">
               <h3>Image Translation Tool</h3>
             </div>
-            <p class="des">
-              A responsive personal portfolio built with HTML, CSS, and
-              accessibility best practices.
-            </p>
+            <div class="des">
+              <p>
+                Used Python and machine learning to convert input images into
+                styled outputs.
+              </p>
+            </div>
             <div class="project-links">
               <!--<a href="#" target="_blank" class="live-demo">Live Demo</a>-->
               <a
-                href="https://github.com/yourusername/yourrepo"
+                href="https://github.com/Tyousafdev/Image-translation-tool-v5"
                 target="_blank"
                 class="github-icon"
                 aria-label="GitHub repository"
@@ -125,10 +129,12 @@
             <div class="description-background">
               <h3>Game UI Design (Figma)</h3>
             </div>
-            <p class="des">
-              A responsive personal portfolio built with HTML, CSS, and
-              accessibility best practices.
-            </p>
+            <div class="des">
+              <p>
+                Designed mock UI screens in Figma with a focus aestetics and
+                usability.
+              </p>
+            </div>
             <div class="project-links">
               <!--<a href="#" target="_blank" class="live-demo">Live Demo</a>-->
               <a
@@ -154,10 +160,12 @@
             <div class="description-background">
               <h3>Simple RPG Game</h3>
             </div>
-            <p class="des">
-              A responsive personal portfolio built with HTML, CSS, and
-              accessibility best practices.
-            </p>
+            <div class="des">
+              <p>
+                A responsive personal portfolio built with HTML, CSS, and
+                accessibility best practices.
+              </p>
+            </div>
             <div class="project-links">
               <!--<a href="#" target="_blank" class="live-demo">Live Demo</a>-->
               <a
@@ -183,10 +191,12 @@
             <div class="description-background">
               <h3>Calorie Tracking UI (Figma)</h3>
             </div>
-            <p class="des">
-              A responsive personal portfolio built with HTML, CSS, and
-              accessibility best practices.
-            </p>
+            <div class="des">
+              <p>
+                Created a Figma prototype to track calories with clean layout
+                and user-friendly design.
+              </p>
+            </div>
             <div class="project-links">
               <!--<a href="#" target="_blank" class="live-demo">Live Demo</a>-->
               <a
@@ -212,10 +222,12 @@
             <div class="description-background">
               <h3>Tic Tac Toe</h3>
             </div>
-            <p class="des">
-              A responsive personal portfolio built with HTML, CSS, and
-              accessibility best practices.
-            </p>
+            <div class="des">
+              <p>
+                A responsive personal portfolio built with HTML, CSS, and
+                accessibility best practices.
+              </p>
+            </div>
             <div class="project-links">
               <!--<a href="#" target="_blank" class="live-demo">Live Demo</a>-->
               <a
@@ -241,10 +253,12 @@
             <div class="description-background">
               <h3>Etch-a-Sketch</h3>
             </div>
-            <p class="des">
-              A responsive personal portfolio built with HTML, CSS, and
-              accessibility best practices.
-            </p>
+            <div class="des">
+              <p>
+                A responsive personal portfolio built with HTML, CSS, and
+                accessibility best practices.
+              </p>
+            </div>
             <div class="project-links">
               <!--<a href="#" target="_blank" class="live-demo">Live Demo</a>-->
               <a
