added skills section - styled - changed layout

--- a/index.html
+++ b/index.html
@@ -41,18 +41,63 @@
     <!-- MAIN CONTENT -->
     <main>
       <!-- ABOUT ME -->
-      <section id="about-me">
-        <p class="name">Talha Yousaf</p>
-        <p>
-          A dedicated Software Development student seeking new experiences.
-          Reliable, eager to tackle challenges, and motivated by the opportunity
-          to learn and continue growing.
-        </p>
-        <ul class="skills">
-          <li>HTML, CSS, JavaScript</li>
-          <li>Accessibility (WCAG/AODA)</li>
-          <li>Communication & Teamwork</li>
-        </ul>
+      <section id="about-section">
+        <div id="about-me">
+          <p class="name">Talha Yousaf</p>
+          <br />
+          <p>
+            I am a Software Development student passionate about building
+            interactive, user-friendly, and accessible applications. My focus is
+            on <strong>front-end development, graphics programming,</strong>
+            and creating tools that combine creativity with technical
+            performance.
+          </p>
+          <p>
+            I thrive on tackling challenges, collaborating with teams, and
+            continuously learning new technologies to expand my skill set.
+          </p>
+        </div>
+
+        <div id="skills-me">
+          <h3>Skills</h3>
+          <div class="skills-container">
+            <!-- Bars (left) -->
+            <div class="skills-bars">
+              <div class="skill">
+                <p>HTML / CSS</p>
+                <div class="bar"><span style="width: 95%"></span></div>
+              </div>
+              <div class="skill">
+                <p>JavaScript</p>
+                <div class="bar"><span style="width: 80%"></span></div>
+              </div>
+              <div class="skill">
+                <p>C++ / OpenGL</p>
+                <div class="bar"><span style="width: 38%"></span></div>
+              </div>
+              <div class="skill">
+                <p>Python (ML/OCR)</p>
+                <div class="bar"><span style="width: 70%"></span></div>
+              </div>
+            </div>
+
+            <!-- Bubbles (right) -->
+            <div class="skills-icons">
+              <div class="icon"><img src="assets/icons/html.svg" alt="HTML5" /></div>
+              <div class="icon"><img src="assets/icons/css.svg" alt="CSS3" /></div>
+              <div class="icon">
+                <img src="assets/icons/js.svg" alt="JavaScript" />
+              </div>
+              <div class="icon"><img src="assets/icons/c++.svg" alt="C++" /></div>
+              <div class="icon">
+                <img src="assets/icons/py.svg" alt="Python" />
+              </div>
+              <div class="icon">
+                <img src="assets/icons/open.svg" alt="OpenGL" />
+              </div>
+            </div>
+          </div>
+        </div>
       </section>
 
       <!-- PROJECTS -->
